--- a/fastapi.ipynb
+++ b/fastapi.ipynb
@@ -436,6 +436,331 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nest_asyncio\n",
+    "import uvicorn\n",
+    "nest_asyncio.apply()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fastapi allows yoiu to declare additonal information and validation for your parameters\n",
+    "\n",
+    "from fastapi import FastAPI\n",
+    "\n",
+    "#here we are not importing the basemodel to showcase another usecase\n",
+    "\n",
+    "app = FastAPI()\n",
+    "\n",
+    "@app.get('/items/')\n",
+    "async def read_item (q: str|None = None):\n",
+    "    results = {'items': [{'item_id':'Foo'}, {'item_id':'Bar'}]}\n",
+    "    if q:\n",
+    "        results.update({'q':q})\n",
+    "    return results\n",
+    "\n",
+    "\n",
+    "uvicorn.run(app, port=8000)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Now we will do the same thing but using annotated\n",
+    "#also we want the query to be limited at 50 chars\n",
+    "from fastapi import FastAPI, Query\n",
+    "from typing import Annotated\n",
+    "\n",
+    "\n",
+    "app = FastAPI()\n",
+    "\n",
+    "\n",
+    "@app.get('/items/')\n",
+    "async def read_item (q : Annotated[str|None, Query(max_length=5)] = None):\n",
+    "    results = {'item':[{'item_id': 'Foo'},{'item_id':'bar'}]}\n",
+    "    if q:\n",
+    "        results.update({'q':q})\n",
+    "    return results\n",
+    "\n",
+    "\n",
+    "uvicorn.run(app, port=8000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Clearly this mentions that the length of the q must not be larger that 5 chars as we have mentioned"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Alt text](Screenshot%20from%202023-03-20%2012-55-33.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Started server process [14197]\n",
+      "INFO:     Waiting for application startup.\n",
+      "INFO:     Application startup complete.\n",
+      "INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:38084 - \"GET /docs HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:38084 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:50478 - \"GET /items/?q=fixedlength HTTP/1.1\" 200 OK\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Shutting down\n",
+      "INFO:     Waiting for application shutdown.\n",
+      "INFO:     Application shutdown complete.\n",
+      "INFO:     Finished server process [14197]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#add regular expressions \n",
+    "\n",
+    "from typing import Annotated\n",
+    "from fastapi import FastAPI,Query\n",
+    "\n",
+    "app = FastAPI()\n",
+    "\n",
+    "@app.get('/items/')\n",
+    "async def read_items(q: Annotated[str|None, Query(min_length=3,max_length=50, regex='^fixedlength$')] = None):\n",
+    "    result = {'items':[{'item_id':'Foo'},{'item':'Bar'}]}\n",
+    "    if q:\n",
+    "        result.update({'q':q})\n",
+    "    return result\n",
+    "\n",
+    "uvicorn.run(app, port=8000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Started server process [14197]\n",
+      "INFO:     Waiting for application startup.\n",
+      "INFO:     Application startup complete.\n",
+      "INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:37120 - \"GET / HTTP/1.1\" 404 Not Found\n",
+      "INFO:     127.0.0.1:37122 - \"GET /items/ HTTP/1.1\" 422 Unprocessable Entity\n",
+      "INFO:     127.0.0.1:39698 - \"GET /docs HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:39698 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:37480 - \"GET /items/?q=hello HTTP/1.1\" 200 OK\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Shutting down\n",
+      "INFO:     Waiting for application shutdown.\n",
+      "INFO:     Application shutdown complete.\n",
+      "INFO:     Finished server process [14197]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Adding default values or forcing the value of q\n",
+    "\n",
+    "from fastapi import FastAPI, Query\n",
+    "from typing import Annotated\n",
+    "from pydantic import Required\n",
+    "\n",
+    "\n",
+    "app = FastAPI()\n",
+    "\n",
+    "\n",
+    "\n",
+    "@app.get('/items/')\n",
+    "async def read_item(q: Annotated[str, Query(min_length=3)] = Required):\n",
+    "    results = {'items':[{'item_id':'Foo'},{'item_name':'bar'}]}\n",
+    "    if q:\n",
+    "        results.update({'q':q})\n",
+    "    return results\n",
+    "\n",
+    "\n",
+    "uvicorn.run(app, port=8000)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Query parameter list/ multiple values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nest_asyncio\n",
+    "import uvicorn\n",
+    "\n",
+    "nest_asyncio.apply()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Started server process [5942]\n",
+      "INFO:     Waiting for application startup.\n",
+      "INFO:     Application startup complete.\n",
+      "INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:54912 - \"GET / HTTP/1.1\" 404 Not Found\n",
+      "INFO:     127.0.0.1:36460 - \"GET /docs HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:35026 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:60624 - \"GET /items/?q=foo&q=bar HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:35230 - \"GET /items/?q=foo&q=bar&q=demon&q=string HTTP/1.1\" 200 OK\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Shutting down\n",
+      "INFO:     Waiting for application shutdown.\n",
+      "INFO:     Application shutdown complete.\n",
+      "INFO:     Finished server process [5942]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import Annotated\n",
+    "from fastapi import FastAPI, Query\n",
+    "\n",
+    "\n",
+    "app = FastAPI()\n",
+    "\n",
+    "\n",
+    "@app.get('/items/')\n",
+    "async def read_items(q: Annotated[list[str] | None, Query()] = None):\n",
+    "    query_items = {\"q\":q}\n",
+    "    return query_items\n",
+    "\n",
+    "\n",
+    "\n",
+    "uvicorn.run(app, port=8000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#same with multiple default values\n",
+    "\n",
+    "from typing import Annotated\n",
+    "\n",
+    "\n",
+    "from fastapi import FastAPI, Query\n",
+    "\n",
+    "\n",
+    "app = FastAPI()\n",
+    "\n",
+    "\n",
+    "@app.get('/items/')\n",
+    "async def read_items(q: Annotated[list[str] | None, Query()] = ['foo','bar']):\n",
+    "    query_items = {'q':q}\n",
+    "    return query_items\n",
+    "\n",
+    "\n",
+    "uvicorn.run(app, port=8000)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adding title and description to the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Annotated, Union\n",
+    "from fastapi import FastAPI, Query\n",
+    "\n",
+    "app = FastAPI()\n",
+    "\n",
+    "\n",
+    "\n",
+    "@app.get('/items/')\n",
+    "async def read_items(q: Annotated[str | None, Query(title='Query String',description = 'Query string for the items to search in the database that have a good match',min_length=3)] =  None):\n",
+    "    results = {'items' : [{'item_id':'Foo'}, {'itme_id':'bar'}]}\n",
+    "    if q:\n",
+    "        results.update({'q':q})\n",
+    "    return results\n",
+    "\n",
+    "\n",
+    "uvicorn.run(app, port=8000)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
