--- a/Cookie_parameters.ipynb
+++ b/Cookie_parameters.ipynb
@@ -604,6 +604,212 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Annotate a Response Subclass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nest_asyncio\n",
+    "import uvicorn\n",
+    "nest_asyncio.apply()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Started server process [9523]\n",
+      "INFO:     Waiting for application startup.\n",
+      "INFO:     Application startup complete.\n",
+      "INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:58178 - \"GET / HTTP/1.1\" 404 Not Found\n",
+      "INFO:     127.0.0.1:58178 - \"GET /favicon.ico HTTP/1.1\" 404 Not Found\n",
+      "INFO:     127.0.0.1:58178 - \"GET /docs HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:58178 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:58178 - \"GET /teleport HTTP/1.1\" 307 Temporary Redirect\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Shutting down\n",
+      "INFO:     Waiting for application shutdown.\n",
+      "INFO:     Application shutdown complete.\n",
+      "INFO:     Finished server process [9523]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#You can also use a subclass of Response in the type annotation:\n",
+    "\n",
+    "\n",
+    "from fastapi import FastAPI\n",
+    "from fastapi.responses import RedirectResponse\n",
+    "\n",
+    "\n",
+    "app = FastAPI()\n",
+    "\n",
+    "\n",
+    "@app.get('/teleport')\n",
+    "async def get_teleport() -> RedirectResponse:\n",
+    "    return RedirectResponse(url='https://www.youtube.com/watch?v=dQw4w9WgXcQ')\n",
+    "\n",
+    "\n",
+    "uvicorn.run(app, port=8000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastapi import FastAPI, Response\n",
+    "\n",
+    "from fastapi.responses import RedirectResponse\n",
+    "\n",
+    "\n",
+    "app = FastAPI()\n",
+    "\n",
+    "@app.get('/portal')\n",
+    "async def get_portal(teleport: bool = False) -> Response | dict:\n",
+    "    if teleport:\n",
+    "        return RedirectResponse(url=\"https://www.youtube.com\")\n",
+    "    return {'message': \"here's your interdimentional portal\"}\n",
+    "\n",
+    "uvicorn.run(app, port=8000)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Disable Response Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastapi import FastAPI\n",
+    "from pydantic import BaseModel\n",
+    "\n",
+    "app = FastAPI()\n",
+    "\n",
+    "\n",
+    "class Item(BaseModel):\n",
+    "    name: str\n",
+    "    description: str | None = None\n",
+    "    price: float\n",
+    "    tax: float = 10.5\n",
+    "    tags: list[str] = []\n",
+    "\n",
+    "\n",
+    "items = {\n",
+    "    \"foo\": {\"name\": \"Foo\", \"price\": 50.2},\n",
+    "    \"bar\": {\"name\": \"Bar\", \"description\": \"The bartenders\", \"price\": 62, \"tax\": 20.2},\n",
+    "    \"baz\": {\"name\": \"Baz\", \"description\": None, \"price\": 50.2, \"tax\": 10.5, \"tags\": []},\n",
+    "}\n",
+    "\n",
+    "\n",
+    "@app.get(\"/items/{item_id}\", response_model=Item, response_model_exclude_unset=True)\n",
+    "async def read_item(item_id: str):\n",
+    "    return items[item_id]\n",
+    "\n",
+    "\n",
+    "uvicorn.run(app, port=8000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Shutting down\n",
+      "INFO:     Waiting for application shutdown.\n",
+      "INFO:     Application shutdown complete.\n",
+      "INFO:     Finished server process [9523]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#fastapi is smart enough to realize that even though description, tax and tags have the same values as the defaults they were set explicityly\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "from fastapi import FastAPI\n",
+    "from pydantic import BaseModel\n",
+    "\n",
+    "\n",
+    "app = FastAPI()\n",
+    "\n",
+    "\n",
+    "class Item(BaseModel):\n",
+    "    name: str\n",
+    "    description: str | None = None\n",
+    "    price: float\n",
+    "    tax: float = 10.5\n",
+    "\n",
+    "items = {\n",
+    "    \"foo\": {'name': 'Foo', 'price': 50.2},\n",
+    "    \"bar\": {'name': \"Bar\", \"description\":\"The Bar fighters\",\"price\":62, \"tax\": 20.2},\n",
+    "    \"baz\": {\n",
+    "    \"name\": \"Baz\",\n",
+    "    \"description\": \"there goes my baz\",\n",
+    "    \"price\": 50.2,\n",
+    "    \"tax\": 10.5,\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "\n",
+    "@app.get(\n",
+    "    \"/items/{item_id}/name\",\n",
+    "    response_model=Item,\n",
+    "    response_model_include={\"name\", \"description\"},\n",
+    ")\n",
+    "async def read_item_name(item_id: str):\n",
+    "    return items[item_id]\n",
+    "\n",
+    "\n",
+    "@app.get(\"/items/{item_id}/public\", response_model=Item, response_model_exclude={\"tax\"})\n",
+    "async def read_item_public_data(item_id: str):\n",
+    "    return items[item_id]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "uvicorn.run(app, port=8000)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
