--- a/Security.ipynb
+++ b/Security.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,30 +34,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:     Started server process [15296]\n",
+      "INFO:     Started server process [7059]\n",
       "INFO:     Waiting for application startup.\n",
       "INFO:     Application startup complete.\n",
-      "INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:     127.0.0.1:53090 - \"GET /docs HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:53090 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:53100 - \"POST /token HTTP/1.1\" 404 Not Found\n",
-      "INFO:     127.0.0.1:41424 - \"GET /items/ HTTP/1.1\" 401 Unauthorized\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)\n",
       "INFO:     Shutting down\n",
       "INFO:     Waiting for application shutdown.\n",
       "INFO:     Application shutdown complete.\n",
-      "INFO:     Finished server process [15296]\n"
+      "INFO:     Finished server process [7059]\n"
      ]
     }
    ],
@@ -511,6 +495,256 @@
     "#So, in our endpoint, we will only get a user if the user exists, was correctly authenticated, and is active:\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#OAuth2 with Password (and hashing), Bearer with JWT tokens\n",
+    "\n",
+    "!pip install \"python-jose[cryptography]\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting passlib[bcrypt]\n",
+      "  Downloading passlib-1.7.4-py2.py3-none-any.whl (525 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m525.6/525.6 kB\u001b[0m \u001b[31m1.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hCollecting bcrypt>=3.1.0\n",
+      "  Downloading bcrypt-4.0.1-cp36-abi3-manylinux_2_28_x86_64.whl (593 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m593.7/593.7 kB\u001b[0m \u001b[31m845.5 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: passlib, bcrypt\n",
+      "Successfully installed bcrypt-4.0.1 passlib-1.7.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#passlib is a great python package to handle password hashes\n",
+    "\n",
+    "!pip install \"passlib[bcrypt]\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0908868846967dd656aea792924553a18f408e9460efb612986688c9a3321aed\n"
+     ]
+    }
+   ],
+   "source": [
+    "!openssl rand -hex 32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Started server process [7059]\n",
+      "INFO:     Waiting for application startup.\n",
+      "INFO:     Application startup complete.\n",
+      "INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:49712 - \"GET /docs HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:49712 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:49712 - \"POST /token HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:54862 - \"GET /users/me/ HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:52058 - \"GET /users/me/items/ HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:56592 - \"POST /token HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:53226 - \"GET /docs HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:53226 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:53236 - \"POST /token HTTP/1.1\" 200 OK\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Shutting down\n",
+      "INFO:     Waiting for application shutdown.\n",
+      "INFO:     Application shutdown complete.\n",
+      "INFO:     Finished server process [7059]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime, timedelta\n",
+    "from typing import Annotated\n",
+    "\n",
+    "from fastapi import Depends, FastAPI, HTTPException, status\n",
+    "from fastapi.security import OAuth2PasswordBearer, OAuth2PasswordRequestForm\n",
+    "from jose import JWTError, jwt\n",
+    "from passlib.context import CryptContext\n",
+    "from pydantic import BaseModel\n",
+    "\n",
+    "\n",
+    "\n",
+    "SECRET_KEY = '0908868846967dd656aea792924553a18f408e9460efb612986688c9a3321aed'\n",
+    "ALGORITHM = 'HS256'\n",
+    "ACCESS_TOKEN_EXPIRE_MINUTES = 30\n",
+    "\n",
+    "\n",
+    "fake_users_db = {\n",
+    "    \"johndoe\": {\n",
+    "        \"username\": \"johndoe\",\n",
+    "        \"full_name\": \"John Doe\",\n",
+    "        \"email\": \"johndoe@example.com\",\n",
+    "        \"hashed_password\": \"$2b$12$EixZaYVK1fsbw1ZfbX3OXePaWxn96p36WQoeG6Lruj3vjPGga31lW\",\n",
+    "        \"disabled\": False,\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Token(BaseModel):\n",
+    "    access_token: str\n",
+    "    token_type: str\n",
+    "\n",
+    "class TokenData(BaseModel):\n",
+    "    username: str | None = None\n",
+    "\n",
+    "\n",
+    "class User(BaseModel):\n",
+    "    username: str\n",
+    "    email: str | None = None\n",
+    "    full_name: str | None = None\n",
+    "    disabled: bool | None = None\n",
+    "\n",
+    "class UserInDB(User):\n",
+    "    hashed_password: str\n",
+    "\n",
+    "pwd_context = CryptContext(schemes=[\"bcrypt\"], deprecated=\"auto\")\n",
+    "oauth2_scheme = OAuth2PasswordBearer(tokenUrl=\"token\")\n",
+    "\n",
+    "\n",
+    "app = FastAPI()\n",
+    "\n",
+    "\n",
+    "def verify_password(plain_password, hashed_password):\n",
+    "    return pwd_context.verify(plain_password, hashed_password)\n",
+    "\n",
+    "\n",
+    "def get_password_hash(password):\n",
+    "    return pwd_context.hash(password)\n",
+    "\n",
+    "\n",
+    "def get_user(db, username: str):\n",
+    "    if username in db:\n",
+    "        user_dict = db[username]\n",
+    "        return UserInDB(**user_dict)\n",
+    "\n",
+    "\n",
+    "def authenticate_user(fake_db, username: str, password: str):\n",
+    "    user = get_user(fake_db, username)\n",
+    "    if not user:\n",
+    "        return False\n",
+    "    if not verify_password(password, user.hashed_password):\n",
+    "        return False\n",
+    "    return user\n",
+    "\n",
+    "\n",
+    "def create_access_token(data: dict, expires_delta: timedelta | None = None):\n",
+    "    to_encode = data.copy()\n",
+    "    if expires_delta:\n",
+    "        expire = datetime.utcnow() + expires_delta\n",
+    "    else:\n",
+    "        expire = datetime.utcnow() + timedelta(minutes=15)\n",
+    "    to_encode.update({\"exp\": expire})\n",
+    "    encoded_jwt = jwt.encode(to_encode, SECRET_KEY, algorithm=ALGORITHM)\n",
+    "    return encoded_jwt\n",
+    "\n",
+    "\n",
+    "async def get_current_user(token: Annotated[str, Depends(oauth2_scheme)]):\n",
+    "    credentials_exception = HTTPException(\n",
+    "        status_code=status.HTTP_401_UNAUTHORIZED,\n",
+    "        detail=\"Could not validate credentials\",\n",
+    "        headers={\"WWW-Authenticate\": \"Bearer\"},\n",
+    "    )\n",
+    "    try:\n",
+    "        payload = jwt.decode(token, SECRET_KEY, algorithms=[ALGORITHM])\n",
+    "        username: str = payload.get(\"sub\")\n",
+    "        if username is None:\n",
+    "            raise credentials_exception\n",
+    "        token_data = TokenData(username=username)\n",
+    "    except JWTError:\n",
+    "        raise credentials_exception\n",
+    "    user = get_user(fake_users_db, username=token_data.username)\n",
+    "    if user is None:\n",
+    "        raise credentials_exception\n",
+    "    return user\n",
+    "\n",
+    "\n",
+    "async def get_current_active_user(\n",
+    "    current_user: Annotated[User, Depends(get_current_user)]\n",
+    "):\n",
+    "    if current_user.disabled:\n",
+    "        raise HTTPException(status_code=400, detail=\"Inactive user\")\n",
+    "    return current_user\n",
+    "\n",
+    "\n",
+    "@app.post(\"/token\", response_model=Token)\n",
+    "async def login_for_access_token(\n",
+    "    form_data: Annotated[OAuth2PasswordRequestForm, Depends()]\n",
+    "):\n",
+    "    user = authenticate_user(fake_users_db, form_data.username, form_data.password)\n",
+    "    if not user:\n",
+    "        raise HTTPException(\n",
+    "            status_code=status.HTTP_401_UNAUTHORIZED,\n",
+    "            detail=\"Incorrect username or password\",\n",
+    "            headers={\"WWW-Authenticate\": \"Bearer\"},\n",
+    "        )\n",
+    "    access_token_expires = timedelta(minutes=ACCESS_TOKEN_EXPIRE_MINUTES)\n",
+    "    access_token = create_access_token(\n",
+    "        data={\"sub\": user.username}, expires_delta=access_token_expires\n",
+    "    )\n",
+    "    return {\"access_token\": access_token, \"token_type\": \"bearer\"}\n",
+    "\n",
+    "\n",
+    "@app.get(\"/users/me/\", response_model=User)\n",
+    "async def read_users_me(\n",
+    "    current_user: Annotated[User, Depends(get_current_active_user)]\n",
+    "):\n",
+    "    return current_user\n",
+    "\n",
+    "\n",
+    "@app.get(\"/users/me/items/\")\n",
+    "async def read_own_items(\n",
+    "    current_user: Annotated[User, Depends(get_current_active_user)]\n",
+    "):\n",
+    "    return [{\"item_id\": \"Foo\", \"owner\": current_user.username}]\n",
+    "\n",
+    "\n",
+    "uvicorn.run(app, port=8000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
